Fix footer to bottom. Improve book list spacing

--- a/src/components/BookList/book-list.scss
+++ b/src/components/BookList/book-list.scss
@@ -1,49 +1,3 @@
-@import '../../colors';
-
 .book-list {
-  &__grid {
-    margin-top: 5rem;
-  }
-
-  &__pagination {
-    background: $charcoal;
-    margin-top: 1rem;
-
-    ul.pagination {
-      cursor: pointer;
-
-      li.active a {
-        background: none;
-        color: $paper;
-
-        &:hover {
-          background: none;
-        }
-      }
-
-      li.disabled a {
-        background: none;
-        color: $pale-gold;
-        opacity: 0.25;
-
-        &:hover {
-          background: none;
-        }
-      }
-
-      a {
-        background: none;
-        border: none;
-        border-radius: 3rem;
-        color: $pale-gold;
-        font-size: 1.5rem;
-        margin: 0.5rem;
-
-        &:hover {
-          background: $charcoal;
-          color: $silk;
-        }
-      }
-    }
-  }
+  margin: 5rem auto;
 }
